--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <a href="index.html" class="navbar-brand">LoopLAB</a>
         <button
-          class="navbar-toggler" 
+          class="navbar-toggler"
           data-toggle="collapse"
           data-target="#navbarCollapse"
         >
@@ -122,7 +122,11 @@
                         placeholder="Confirm Password"
                       />
                     </div>
-                    <input type="submit" value="Submit" class="btn btn-outline-light btn-block">
+                    <input
+                      type="submit"
+                      value="Submit"
+                      class="btn btn-outline-light btn-block"
+                    />
                   </form>
                 </div>
               </div>
@@ -131,6 +135,64 @@
         </div>
       </div>
     </header>
+
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente
+              doloribus ut iure itaque quibusdam rem accusantium deserunt
+              reprehenderit sunt minus.
+            </p>
+            <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+    <div id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="./img/explore-section1.jpg"
+              alt="explore section1 img"
+              class="img-fluid rounded-circle mb-5"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+              reiciendis, voluptate at alias laborum odit aliquid tempore
+              perspiciatis repudiandae hic?
+            </p>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                ducimus eos dolorem!
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                ducimus eos dolorem!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
