--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item-head-section">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="#home-section" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="#explore-head-section" class="nav-link">Explore</a>
@@ -170,6 +170,118 @@
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
               reiciendis, voluptate at alias laborum odit aliquid tempore
               perspiciatis repudiandae hic?
+            </p>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                ducimus eos dolorem!
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                ducimus eos dolorem!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- CREATE HEAD -->
+    <section id="create-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Create</h1>
+            <p class="lead">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente
+              doloribus ut iure itaque quibusdam rem accusantium deserunt
+              reprehenderit sunt minus.
+            </p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE SECTION -->
+    <div id="create-section" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 order-2">
+            <img
+              src="./img/create-section1.jpg"
+              alt="create section1 img"
+              class="img-fluid rounded-circle"
+            />
+          </div>
+          <div class="col-md-6 order-1">
+            <h3>Create Your Passion</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+              reiciendis, voluptate at alias laborum odit aliquid tempore
+              perspiciatis repudiandae hic?
+            </p>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                distinctio iusto, perspiciatis mollitia natus harum?
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="align-self-start p-4">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="align-self-end p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                distinctio iusto, perspiciatis mollitia natus harum?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- SHARE HEAD -->
+    <section id="share-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Share</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
+            </p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <div id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="./img/share-section1.jpg"
+              alt="share section1 img"
+              class="img-fluid rounded-circle mb-5"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Share What You Create</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio iusto, perspiciatis mollitia natus harum?
             </p>
             <div class="d-flex">
               <div class="align-self-start p-4">
